--- a/config.env
+++ b/config.env
@@ -64,7 +64,7 @@ TIMEZONE = "Asia/Jakarta"
 TITLE_NAME = "Kanna Chan Mirror Drive 🇲🇨"
 AUTHOR_NAME = "Tama"
 AUTHOR_URL = ""
-GD_INFO = ""
+GD_INFO = "Join @kannachan_mirrordrive"
 
 # Force Sub Channel
 FSUB = ""
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID = 
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://botwzmlnyahozuumi.herokuapp.com"
+BASE_URL_OF_BOT = "https://oalahtempeksuspenteros.herokuapp.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
@@ -123,7 +123,7 @@ TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
 CLONE_LIMIT = ""
 LEECH_LIMIT = ""
-MEGA_LIMIT = "5"
+MEGA_LIMIT = ""
 TIME_GAP = -1       
 
 
@@ -132,7 +132,7 @@ FINISHED_PROGRESS_STR = '●' # '■'
 UN_FINISHED_PROGRESS_STR = '○' # '□'
 
 # THEME
-EMOJI_THEME = "True"      #Default is False
+EMOJI_THEME = ""      #Default is False
 SHOW_LIMITS_IN_STATS = "True"   #Default is false 
 
 #VIEW STYLE
