--- a/config.env
+++ b/config.env
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID = 
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://pehsuspenmemeq.herokuapp.com"
+BASE_URL_OF_BOT = "https://pehsuspenmemmeq.herokuapp.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
